k8s/overlays/dev/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: messager
spec:
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: messager
spec:
  template:
    spec:
      containers:
        - name: bff
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: messager
spec:
  template:
    spec:
      containers:
        - name: user-service
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  namespace: messager
spec:
  template:
    spec:
      containers:
        - name: message-service
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
