k8s/overlays/dev/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: messager
spec:
  rules:
    - host: dev.messager.local
